fixed date-time label implementation and event naming

--- a/WaFITests/Info.plist
+++ b/WaFITests/Info.plist
@@ -18,5 +18,11 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>CFBundleDisplayName</key>
+	<string></string>
+	<key>CFBundleGetInfoString</key>
+	<string>Allows you to add images to your event.</string>
 </dict>
 </plist>
